--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <header>Header</header>
         
         <main>
-            <aside class="left-side">Aside Left</aside>
+            <aside class="left-side">
+                <div class="left-top">
+                    
+                </div>
+                <div class="left-bottom">
+
+                </div>
+            </aside>
             <section class="container">
                 <div class="type-status">
                     <input type="text" placeholder="Status:">
