--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <button class="btn"><i class="fa fa-pencil"></i>Post</button>
             </section>
             <aside class="right-side">Aside Right</aside>
+            <div>Upcoming</div>
         </main>
         
         
