added My profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>Header</header>
         
         <main>
-            <aside class="left-side">Aside Left</aside>
+            <aside class="left-side">Aside Left
+                <p>My profile</p>
+            </aside>
             <section class="container">
                 <div class="type-status">
                     <input type="text" placeholder="Status:">
