changed a class name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <button class="btn"><i class="fa fa-pencil"></i>Post</button>
         </section>
-        <aside class="right-side">
+        <aside class="right-aside">
 
             <div class="section1">
                 <p>Upcoming Events:</p>
