--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     , initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Social Network</title>
 </head>
@@ -19,12 +18,25 @@
     </header>
 
     <main>
-        <aside class="left-side">Aside Left
-            <p>My profile</p>
+        <aside class="left-side">
+            
 
             <div class="left-top">
-
+                <div class="my-profile">
+                <p>My profile</p>
+                <div class="my-pic"><img src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/marat.jpg" alt="">
+                </div>
+                <hr>
+                <ul class="personal-data">
+                    <li> <i class="fas fa-pencil-alt"></i> Software Engineer</li>
+                    <li> <i class="fas fa-home"></i> Seattle, WA</li>
+                    <li> <i class="fas fa-birthday-cake"></i> April 10</li>
+                </ul>
             </div>
+            <div class="my-groups"> <button><i class="fas fa-circle-notch"></i> My Groups</button> <p>Some text..</p></div>
+            <div class="my-events"> <button><i class="fas fa-calendar-check"></i> My Events</button><p>Some other text..</p></div>
+            <div class="my-photos"> <button><i class="fas fa-users"></i> My Photos</button></div>
+            </div> 
             <div class="left-bottom">
 
             </div>
@@ -33,7 +45,7 @@
             <div class="type-status">
                 <input type="text" placeholder="Status:">
             </div>
-            <button class="btn"><i class="fa fa-pencil"></i>Post</button>
+            <button class="btn"><i class="fas fa-pencil-alt"></i>Post</button>
         </section>
         <aside class="right-aside">
 
