--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
@@ -20,24 +19,30 @@
     <main>
         <aside class="left-side">
 
-            
+
 
             <div class="left-top">
                 <div class="my-profile">
-                <p>My profile</p>
-                <div class="my-pic"><img src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/marat.jpg" alt="">
+                    <p>My profile</p>
+                    <div class="my-pic"><img
+                            src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/marat.jpg"
+                            alt="">
+                    </div>
+                    <hr>
+                    <ul class="personal-data">
+                        <li> <i class="fas fa-pencil-alt"></i> Software Engineer</li>
+                        <li> <i class="fas fa-home"></i> Seattle, WA</li>
+                        <li> <i class="fas fa-birthday-cake"></i> April 10</li>
+                    </ul>
                 </div>
-                <hr>
-                <ul class="personal-data">
-                    <li> <i class="fas fa-pencil-alt"></i> Software Engineer</li>
-                    <li> <i class="fas fa-home"></i> Seattle, WA</li>
-                    <li> <i class="fas fa-birthday-cake"></i> April 10</li>
-                </ul>
+                <div class="my-groups"> <button><i class="fas fa-circle-notch"></i> My Groups</button>
+                    <p>Some text..</p>
+                </div>
+                <div class="my-events"> <button><i class="fas fa-calendar-check"></i> My Events</button>
+                    <p>Some other text..</p>
+                </div>
+                <div class="my-photos"> <button><i class="fas fa-users"></i> My Photos</button></div>
             </div>
-            <div class="my-groups"> <button><i class="fas fa-circle-notch"></i> My Groups</button> <p>Some text..</p></div>
-            <div class="my-events"> <button><i class="fas fa-calendar-check"></i> My Events</button><p>Some other text..</p></div>
-            <div class="my-photos"> <button><i class="fas fa-users"></i> My Photos</button></div>
-            </div> 
             <div class="left-bottom">
 
             </div>
