aside buttons fixed

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
                 <h3>Rachel Sine</h3>
                 <br />
                 <hr />
+                
+
+                <p>
+                    Next cohort will start soon. We strive for teaching our students the
+                    most up-to-date programming technologies. Contact us.
+                </p>
                 <div class="user-content">
                     <div class="col-img">
                         <img src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/p0.png"
@@ -115,12 +121,6 @@
                             alt="" />
                     </div>
                 </div>
-
-                <p>
-                    Next cohort will start soon. We strive for teaching our students the
-                    most up-to-date programming technologies. Contact us.
-                </p>
-
                 <button><i class="fas fa-thumbs-up"></i>Like</button>
                 <button><i class="fas fa-comment"></i>Comment</button>
 
@@ -195,8 +195,9 @@
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
+                <div class="clearfix"></div>
             </div>
-
+            
             <div class="section3">
                 <p>ADS</p>
             </div>
