header was modified

--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
 <body>
     <header class="navi">
-        <div class="firstpart">
-            <a class="seytech" href="#"><i class="fas fa-home"></i>Seytech</a>
-            <a href="#" class="globe"> <i class="fas fa-globe-americas"></i></a>
-            <a href="#" class="user"> <i class="fas fa-user"></i></a>
-            <a href="#" class="envelope"><i class="fas fa-envelope"></i></a>
+        <div class="first-part">
+            <div class="seytech" >
+                <a href="#"><i class="fas fa-home"></i>Seytech</a>
+            </div>
+            <div class="globe">
+                <a href="#"><i class="fas fa-globe-americas"></i></a>
+            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="#"><i class="fas fa-envelope"></i></a>
+            </div>
+            
+            
         </div>
     </header>
 
