--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/rachel.jpeg"
                         alt="" />
                 </div>
-                <span class="time">1 min</span>
+               <span class="time">1 min</span>
 
                 <h3>Rachel Sine</h3>
                 <br />
@@ -191,7 +191,7 @@
             <div class="section2">
                 <p>Friend Request</p>
                 <img src="https://learn.seytech.co/assets/images/avatars/default.jpg" width="100%" alt="Cute Dog" />
-                <span>Shiba Inu</span>
+                <div><span>Shiba Inu</span></div>
                 <div class="btn">
                     <button class="accept" title="Accept">
                         <i class="fas fa-check"></i>
