final verion of the project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="navi">
         <div class="first-part">
             <div class="seytech" >
-                <a href="#"><i class="fas fa-home"></i>Seytech</a>
+                <a href="https://www.seytech.co/" target="_blank"><i class="fas fa-home"></i>Seytech</a>
             </div>
             <div class="globe">
                 <a href="#"><i class="fas fa-globe-americas"></i></a>
