--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="navi">
+    <header>
         <div class="first-part">
             <div class="seytech" >
                 <a href="#"><i class="fas fa-home"></i>Seytech</a>
@@ -211,9 +211,9 @@
             </div>
         </aside>
     </main>
-    <footer class="footer">
-        <div class="footer-a">Footer</div>
-        <div class="footer-b">Powered by<a href="#"> team1</a></div>
+    <footer>
+        <div>Footer</div>
+        <div>Powered by<a href="#"> team1</a></div>
     </footer>
 </body>
 
