--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </section>
 
         <!-- aside right-side starts here -->
-        <aside class="right-aside">
+        <aside class="right-side">
             <div class="section1">
                 <p>Upcoming Events:</p>
                 <img src="https://learn.seytech.co/assets/projects/html-css/projects/6-social-network/assets/event.png"
